[project]
name = "midi-ai-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basic-pitch>=0.4.0",
    "fastapi[standard]>=0.115.13",
    "flask>=3.1.1",
    "pretty-midi>=0.2.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy>=2.0.41",
]
